# ploggo

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  GEMINI.md  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum  pyrightconfig.json  requirements-minimal.txt  requirements.txt
avalon/: BUILD.bazel  avalon.go  avalon_test.go
avalon/client/: BUILD.bazel  client.go
avalon/server/: BUILD.bazel  add_game.go  create_player.go  get_games.go  get_players.go  server.go
avalon/storage/: BUILD.bazel  json_storage.go  json_storage_test.go  storage.go
avalon/storage/postgres/: BUILD.bazel  games.go  games_test.go  players.go  players_test.go  postgres_storage.go  postgres_test.go
avalon/storage/postgres/schema/: 000-create_player_and_game_tables.sql  2JNqgoyzNnTGT9yYaQdvuQYrrNC-create_player_and_game_tables.sql
build_test/go_test/: BUILD.bazel  hello.go
containers/: BUILD.bazel  docker-BUILD.bazel
db_migration/: BUILD.bazel  db_migration.go  pydeps.bzl
game/: BUILD.bazel  game.go
game/deck/: BUILD.bazel  deck.go  deck_test.go
game/deck/card/: BUILD.bazel  card.go  card_test.go
game/deck/rng/: BUILD.bazel  rng.go
game/hand/: BUILD.bazel  hand.go  hand_benchmark_test.go  hand_test.go
ledger_reader/: BUILD.bazel  main.py  pydeps.bzl  requirements-minimal.txt
ledger_reader/sheets_api/: BUILD.bazel  __init__.py  sheets_api_test.py
line_calc/: main.py  pydeps.bzl
pytest/: BUILD.bazel  pydeps.bzl
python-requirements/: requirements-windows.txt  requirements.in  requirements.txt
repayments/: BUILD.bazel  main.py
santa/: BUILD.bazel  main.py
scripts/: new-avalon-db-migration  update-python-build  update-requirements
slack_exe/: BUILD.bazel  main.py  pydeps.bzl
youtube_uploader/: BUILD.bazel  README.md  main.py  requirements-minimal.txt  requirements.txt  uploader.py
