load("@gazelle//:def.bzl", "gazelle")
load("@python_3_13//:defs.bzl", "compile_pip_requirements")
load("@rules_go//go:def.bzl", "nogo")
# load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

nogo(
    name = "go_vet",
    vet = True,
    visibility = ["//visibility:public"],
)

# gazelle:prefix github.com/yiwensong/ploggo
gazelle(name = "gazelle")

# buildifier(
#     name = "buildifier",
# )

# This stanza calls a rule that generates targets for managing pip dependencies
# with pip-compile for a particular python version.
compile_pip_requirements(
    name = "requirements",
    timeout = "moderate",
    src = "python-requirements/requirements.in",
    requirements_txt = "python-requirements/requirements.txt",
)

platform(
    name = "windows_amd64_mingw",
    constraint_values = [
        "@bazel_tools//tools/cpp:mingw",
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
)
