"""Ploggo is a repo containing miscellaneous code"""
module(
    name = "ploggo",
)

bazel_dep(name = "rules_python", version = "1.1.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.13",
)
use_repo(python, "python_3_13")

bazel_dep(name = "gazelle", version = "0.36.0")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.1.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.13",
    requirements_lock = "python-requirements/requirements.txt",
)
use_repo(pip, pydeps = "pip")

bazel_dep(name = "platforms", version = "0.0.10")

bazel_dep(name = "rules_go", version = "0.52.0")
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.1")
go_sdk.nogo(nogo = "//:go_vet")

bazel_dep(name = "rules_oci", version = "2.2.0")
oci = use_extension("@rules_oci//oci:pull.bzl", "oci")
oci.pull(
    name = "distroless_java",
    digest = "sha256:161a1d97d592b3f1919801578c3a47c8e932071168a96267698f4b669c24c76d",
    image = "gcr.io/distroless/java17",
)