load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["avalon.go"],
    importpath = "github.com/yiwensong/ploggo/avalon",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_segmentio_ksuid//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["avalon_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
