load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["avalon.go"],
    importpath = "github.com/yiwensong/ploggo/avalon",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/google/uuid:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/segmentio/ksuid:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["avalon_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
