load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

config_setting(
    name = "amd64",
    constraint_values = ["@platforms//cpu:x86_64"],
)

config_setting(
    name = "armv8",
    constraint_values = ["@platforms//cpu:armv8-m"],
)

alias(
    name = "postgres_base_image",
    actual = select({
        ":amd64": "@io_docker_postgres_amd64//image",
        ":armv8": "@io_docker_postgres_armv8//image",
    }),
)

container_image(
    name = "postgres",
    base = ":postgres_base_image",
)
