load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["db_migration.go"],
    importpath = "github.com/yiwensong/ploggo/db_migration",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_segmentio_ksuid//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
    ],
)

go_binary(
    name = "db_migration",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
