load("@rules_python//python:defs.bzl", "py_binary")
load("@pydeps//:requirements.bzl", "requirement")

py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [
        requirement("attrs"),
        requirement("importlib-metadata"),
        requirement("more-itertools"),
        requirement("packaging"),
        requirement("pluggy"),
        requirement("py"),
        requirement("pyparsing"),
        requirement("pytest"),
        requirement("six"),
        requirement("wcwidth"),
        requirement("zipp"),
    ],
)
