load("@pydeps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [
        ":uploader",
        requirement("pyyaml"),
    ],
)

py_library(
    name = "uploader",
    srcs = ["uploader.py"],
    deps = [
        requirement("google-api-python-client"),
        requirement("httplib2"),
        requirement("google-auth-oauthlib"),
    ],
)
