load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "json_storage.go",
        "storage.go",
    ],
    importpath = "github.com/yiwensong/ploggo/avalon/storage",
    visibility = ["//visibility:public"],
    deps = [
        "//avalon:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["json_storage_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//avalon:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
