load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["hello.go"],
    importpath = "github.com/yiwensong/ploggo/build_test/go_test",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "hello",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
