load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["hand.go"],
    importpath = "github.com/yiwensong/ploggo/game/hand",
    visibility = ["//visibility:public"],
    deps = [
        "//game/deck/card:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "hand_benchmark_test.go",
        "hand_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//game/deck/card:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
