load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("//ledger_reader:pydeps.bzl", "import_deps")

py_library(
    name = "sheets_api",
    srcs = ["__init__.py"],
    visibility = ["//visibility:public"],
    deps = import_deps,
)

py_test(
    name = "sheets_api_test",
    srcs = ["sheets_api_test.py"],
    deps = [
        ":sheets_api",
    ],
)
