load("@pydeps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "sheets_api",
    srcs = ["__init__.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("google-api-python-client"),
        requirement("google-auth-oauthlib"),
        requirement("pandas"),
    ],
)

py_test(
    name = "sheets_api_test",
    srcs = ["sheets_api_test.py"],
    deps = [
        ":sheets_api",
    ],
)
