load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "games.go",
        "players.go",
        "postgres_storage.go",
    ],
    importpath = "github.com/yiwensong/ploggo/avalon/storage/postgres",
    visibility = ["//visibility:public"],
    deps = [
        "//avalon:go_default_library",
        "//avalon/storage:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/jackc/pgx/v5:go_default_library",
        "//vendor/github.com/jackc/pgx/v5/pgtype:go_default_library",
        "//vendor/github.com/jackc/pgx/v5/pgxpool:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "games_test.go",
        "players_test.go",
        "postgres_test.go",
    ],
    data = [
        "//avalon/storage/postgres/schema",
        "//containers:postgres",
    ],
    embed = [":go_default_library"],
    deps = [
        "//avalon:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/testcontainers/testcontainers-go:go_default_library",
        "//vendor/github.com/testcontainers/testcontainers-go/wait:go_default_library",
    ],
)
